# wykladowcav2

./: .gitignore  commands.txt  docker-compose.yml  mypy.ini  pyproject.toml
e2e/: package-lock.json  package.json
src/: .env.example  Dockerfile  manage.py  passenger_wsgi.py  pytest.ini  requirements.txt
src/angular-client/: angular.json  package-lock.json  package.json
src/angular-client/src/: main.ts
src/api/: urls.py
src/api/base/: routers.py  throttling.py
src/core/: __init__.py  apps.py
src/core/admin/: __init__.py  base_admin.py  blacklist_admin.py  blogpost_modeladmin.py  conference_admin.py  crm_todo_modeladmin.py  discountcode_modeladmin.py  leads_admin.py  lecturer_lecturermodel.py  lecturer_modeladmin.py  lecturer_opinion_admin.py  mailing_title_test_modeladmin.py  redirects_admin.py  service_offer_admin.py  user_modeladmin.py  webinar_aggregate_admin.py  webinar_application_modeladmin.py  webinar_category_modeladmin.py  webinar_certificate_modeladmin.py  webinar_metadata_modeladmin.py  webinar_modeladmin.py  webinar_participant_metadata_modeladmin.py  webinar_participant_modeladmin.py  webinar_queue_admin.py
src/core/assets/: changelog.txt  robots.txt
src/core/consts/: __init__.py  aggressor_phrases.py  email_dangerous_phrases.py  exemptions_consts.py  patron_consts.py  slugs_consts.py  spamphrases_consts.py  tagging_consts.py  telegram_chats_consts.py  webmail_consts.py  youtube_streaming_consts.py
src/core/exceptions/: __init__.py  (+1 more)
src/htmx/: crm_urls.py  htmx_urls.py  urls.py
src/wykladowcapl/: asgi.py  celery.py  urls.py  wsgi.py
(+1661 files in other folders)
